update catalog service
